# miscImgProcRamblings

./: .gitignore  CMakeLists.txt  CMakelists.txt  Image.cpp  Image.hpp  ImageUtil.cpp  ImageUtil.hpp  bmpFormat.cpp  bmpFormat.hpp  image.cpp  image.hpp  main.cpp
basics/: CMakelists.txt  Image.cpp  Image.hpp
basics/fileTests/: CMakeLists.txt
fileTests/: imageUtilFileTest.cpp
simple/: bmpFormat.hpp  image.cpp
tests/: CMakeLists.txt  basicImageClassTest.cpp  imageUtilTest.cpp  main.cpp
